# omnisudo.com

./: .gitignore  .gitmodules  CMakeLists.txt  omnisudo.com.sln  project.cmake  vcpkg.json
.run/: Client.run.xml  Desktop & Server.run.xml  Server.run.xml  SkillQuest.Client.Desktop.run.xml  SkillQuest.Server.Terminal.run.xml
SkillQuest.Client.Engine/: CL.cs  Class1.cs  ClientApplication.cs  SkillQuest.Client.Engine.csproj
ai/: chat-cb6dbaa1-8322-4548-bd29-fab03b5c6ce6.txt
lib/imgui-cmake/: CMakeLists.txt
lib/imgui-cmake/src/main/cpp/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
lib/imgui-cmake/src/main/inc/: imconfig.h  imgui.h  imgui_internal.h  imgui_stdlib.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
minecraft/private/MineCraft.Server.Game/: MineCraft.Server.Game.csproj
minecraft/private/MineCraft.Server.Terminal/: MineCraft.Server.Terminal.csproj  Program.cs
minecraft/private/MineCraft.Server.Test/: MineCraft.Server.Test.csproj  UnitTest1.cs
minecraft/public/: .gitignore
minecraft/public/MineCraft.Shared.API/: Class1.cs
minecraft/public/MineCraft.Shared.Game/: Class1.cs
minecraft/public/MineCraft.Shared.Test/: MineCraft.Shared.Test.csproj  UnitTest1.cs
skillquest/: .gitignore
skillquest/addon/base/: CMakeLists.txt
skillquest/addon/sample/: CMakeLists.txt
skillquest/engine/: CMakeLists.txt
skillquest/engine/SkillQuest.Engine.API/: SkillQuest.Engine.API.csproj
skillquest/engine/SkillQuest.Engine.Audio.API/: SkillQuest.Engine.Audio.API.csproj
(+639 files in other folders)
